--- a/app/src/main/res/layout/fragment_rates.xml
+++ b/app/src/main/res/layout/fragment_rates.xml
@@ -13,7 +13,7 @@
         android:scrollbars="vertical" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/favRating"
+        android:id="@+id/fabRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
